assignment/src/main/java/com/example/assignment/error/GlobalExceptionHandler.java
package com.example.assignment.error;

import com.example.assignment.error.exception.BusinessException;
import com.example.assignment.error.exception.ExceptionResponse;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.RestControllerAdvice;

@RestControllerAdvice
public class GlobalExceptionHandler {

    @ExceptionHandler(BusinessException.class)
    public ResponseEntity<ExceptionResponse> handleException(BusinessException e) {
        final ErrorCode errorCode = e.getErrorCode();
        return new ResponseEntity<>(
                new ExceptionResponse(errorCode.getMessage()), HttpStatus.valueOf(errorCode.getStatus())
        );
    }

}
